--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="/Users/luisamable/Desktop/Docencia/JADE-all-4/jade/lib/jade.jar"/>
+	<classpathentry kind="lib" path="C:/Users/garcial/Google Drive UJI/Investigación/ITP Jose/ITP_man_areas/librerias/jade.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
