--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="C:/Users/garcial/Desktop/Material_diverso_docencia/WADE-3.4.0/wadeSuite/wade/lib/commons-codec-1.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/garcial/Desktop/Material_diverso_docencia/WADE-3.4.0/wadeSuite/wade/lib/jade.jar"/>
+	<classpathentry kind="lib" path="/Users/luisamable/Desktop/Docencia/JADE-all-4/jade/lib/commons-codec/commons-codec-1.3.jar"/>
+	<classpathentry kind="lib" path="/Users/luisamable/Desktop/Docencia/JADE-all-4/jade/lib/jade.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
